INTYGFV-10614: Hanterar administratörer (#71)
* INTYGFV-10614: Apier för att hanterar administratörer

* INTYGFV-10614: tagit bort mock apierna som inte längre används

* INTYGFV-10614: Snyggat till i koden

* INTYGFV-10614: Möjlighet att administrera användare

* INTYGFV-10614: Uppdaterat beroenden

* INTYGFV-10614: Skapat cypresstester

* INTYGFV-10614: Snyggat till koden